--- a/index.html
+++ b/index.html
@@ -1,129 +1,77 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kriptovaluta Árfolyamok</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/yahoo-finance2@2.3.10/dist/yahoo-finance2.min.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #f5f5f5;
-        }
-        #plot {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            width: 800px;
-        }
-        #loading {
-            text-align: center;
-            font-size: 18px;
-            color: #666;
-            margin: 20px;
-        }
-        .error {
-            color: #ff0000;
-            text-align: center;
-            margin: 20px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>Bitcoin Árfolyam – 5 év</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 2rem auto;
+    }
+    canvas {
+      background: #fff;
+      border: 1px solid #ccc;
+    }
+  </style>
 </head>
 <body>
-    <div id="loading">Adatok betöltése Yahoo Finance-ről...</div>
-    <div id="plot"></div>
+  <h1>Bitcoin Árfolyam alakulása (USD, elmúlt 5 év)</h1>
+  <canvas id="btcChart" width="800" height="400"></canvas>
 
-    <script>
-        // Yahoo Finance adatok lekérése
-        async function fetchYahooFinanceData() {
-            try {
-                const symbol = 'BTC-USD';
-                const queryOptions = {
-                    period1: new Date(Date.now() - 5 * 365 * 24 * 60 * 60 * 1000).toISOString().split('T')[0],
-                    period2: new Date().toISOString().split('T')[0],
-                    interval: '1d'
-                };
-
-                const result = await yahooFinance.historical(symbol, queryOptions);
-                
-                // Adatok feldolgozása
-                const dates = result.map(item => item.date.toISOString().split('T')[0]);
-                const prices = result.map(item => item.close);
-
-                // Hover szövegek előállítása
-                const hoverTexts = dates.map((date, i) => 
-                    `Dátum: ${date}<br>Záróár: $${prices[i].toLocaleString('en-US', {minimumFractionDigits: 2})}`
-                );
-
-                // Plotly diagram konfiguráció
-                const trace = {
-                    x: dates,
-                    y: prices,
-                    type: 'scatter',
-                    mode: 'lines',
-                    line: {
-                        color: 'darkorange',
-                        width: 0.6
-                    },
-                    hovertext: hoverTexts,
-                    hoverinfo: 'text'
-                };
-
-                const layout = {
-                    title: {
-                        text: 'Bitcoin árfolyam időbeli alakulása (Yahoo Finance)',
-                        font: {
-                            family: 'Arial',
-                            size: 16
-                        }
-                    },
-                    xaxis: {
-                        title: 'Dátum',
-                        tickangle: -45
-                    },
-                    yaxis: {
-                        title: 'Záróár (USD)',
-                        tickformat: '$,.2f'
-                    },
-                    template: 'simple_white',
-                    hovermode: 'x unified',
-                    width: 700,
-                    height: 400,
-                    margin: {
-                        l: 50,
-                        r: 50,
-                        t: 50,
-                        b: 100
-                    }
-                };
-
-                const config = {
-                    responsive: true,
-                    displayModeBar: true,
-                    displaylogo: false
-                };
-
-                // Betöltés szöveg elrejtése
-                document.getElementById('loading').style.display = 'none';
-
-                // Diagram megjelenítése
-                Plotly.newPlot('plot', [trace], layout, config);
-            } catch (error) {
-                console.error('Hiba az adatok lekérésekor:', error);
-                document.getElementById('loading').innerHTML = 
-                    '<div class="error">Hiba történt az adatok betöltése közben. Kérjük, próbálja újra később.</div>';
-            }
+  <script>
+    async function fetchBitcoinData() {
+      const options = {
+        method: 'GET',
+        headers: {
+          'X-RapidAPI-Key': 'YOUR_API_KEY_HERE', // <<< IDE tedd a kulcsod!
+          'X-RapidAPI-Host': 'yahoo-finance15.p.rapidapi.com'
         }
+      };
 
-        // Adatok lekérése az oldal betöltésekor
-        fetchYahooFinanceData();
-    </script>
+      const response = await fetch(
+        'https://yahoo-finance15.p.rapidapi.com/api/yahoo/hi/history/BTC-USD/5y',
+        options
+      );
+
+      const data = await response.json();
+
+      const prices = data.items.reverse(); // időrendbe rakás
+      const labels = prices.map(p => new Date(p.date).toLocaleDateString());
+      const values = prices.map(p => p.close);
+
+      const ctx = document.getElementById('btcChart').getContext('2d');
+      new Chart(ctx, {
+        type: 'line',
+        data: {
+          labels: labels,
+          datasets: [{
+            label: 'Bitcoin árfolyam (USD)',
+            data: values,
+            borderColor: 'rgb(255, 99, 132)',
+            backgroundColor: 'rgba(255, 99, 132, 0.1)',
+            fill: true,
+            tension: 0.1
+          }]
+        },
+        options: {
+          responsive: true,
+          scales: {
+            x: { display: false },
+            y: {
+              beginAtZero: false,
+              title: {
+                display: true,
+                text: 'USD'
+              }
+            }
+          }
+        }
+      });
+    }
+
+    fetchBitcoinData();
+  </script>
 </body>
-</html> 
+</html>
