--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       const options = {
         method: 'GET',
         headers: {
-          'X-RapidAPI-Key': 'YOUR_API_KEY_HERE', // <<< IDE tedd a kulcsod!
+          'X-RapidAPI-Key': 'https://binance43.p.rapidapi.com/ticker/24hr', // <<< IDE tedd a kulcsod!
           'X-RapidAPI-Host': 'yahoo-finance15.p.rapidapi.com'
         }
       };
