--- a/index.html
+++ b/index.html
@@ -1,77 +1,122 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-  <meta charset="UTF-8" />
-  <title>Bitcoin Árfolyam – 5 év</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 2rem auto;
-    }
-    canvas {
-      background: #fff;
-      border: 1px solid #ccc;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Python Kriptovaluta Árfolyamok</title>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/pyodide/v0.24.1/full/pyodide.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #f5f5f5;
+        }
+        #plot {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            width: 800px;
+            margin-top: 20px;
+        }
+        #loading {
+            text-align: center;
+            font-size: 18px;
+            color: #666;
+            margin: 20px;
+        }
+        .error {
+            color: #ff0000;
+            text-align: center;
+            margin: 20px;
+        }
+        #python-code {
+            width: 800px;
+            height: 300px;
+            margin: 20px;
+            padding: 10px;
+            font-family: monospace;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+        }
+    </style>
 </head>
 <body>
-  <h1>Bitcoin Árfolyam alakulása (USD, elmúlt 5 év)</h1>
-  <canvas id="btcChart" width="800" height="400"></canvas>
+    <div id="loading">Python kód inicializálása...</div>
+    <textarea id="python-code" readonly>
+import yfinance as yf
+import pandas as pd
+import plotly.graph_objects as go
 
-  <script>
-    async function fetchBitcoinData() {
-      const options = {
-        method: 'GET',
-        headers: {
-          'X-RapidAPI-Key': 'https://binance43.p.rapidapi.com/ticker/24hr', // <<< IDE tedd a kulcsod!
-          'X-RapidAPI-Host': 'yahoo-finance15.p.rapidapi.com'
-        }
-      };
+# Bitcoin adatok letöltése
+btc_data = yf.download('BTC-USD', period='5y', interval='1d')
 
-      const response = await fetch(
-        'https://yahoo-finance15.p.rapidapi.com/api/yahoo/hi/history/BTC-USD/5y',
-        options
-      );
+# Indexből oszloppá alakítás
+btc_data.reset_index(inplace=True)
+btc_data['Date'] = pd.to_datetime(btc_data['Date'])
 
-      const data = await response.json();
+# Átnevezés
+btc_data['Price'] = btc_data['Close']
 
-      const prices = data.items.reverse(); // időrendbe rakás
-      const labels = prices.map(p => new Date(p.date).toLocaleDateString());
-      const values = prices.map(p => p.close);
+# Hover szöveg előállítása
+btc_data['Date_str'] = btc_data['Date'].dt.strftime('%Y-%m-%d')
+btc_data['Price_str'] = btc_data['Price'].map(lambda x: f"${x:,.2f}")
+btc_data['hover_text'] = "Dátum: " + btc_data['Date_str'] + "<br>Záróár: " + btc_data['Price_str']
 
-      const ctx = document.getElementById('btcChart').getContext('2d');
-      new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels: labels,
-          datasets: [{
-            label: 'Bitcoin árfolyam (USD)',
-            data: values,
-            borderColor: 'rgb(255, 99, 132)',
-            backgroundColor: 'rgba(255, 99, 132, 0.1)',
-            fill: true,
-            tension: 0.1
-          }]
-        },
-        options: {
-          responsive: true,
-          scales: {
-            x: { display: false },
-            y: {
-              beginAtZero: false,
-              title: {
-                display: true,
-                text: 'USD'
-              }
+# Interaktív vonaldiagram
+fig = go.Figure(
+    go.Scatter(
+        x=btc_data['Date'],
+        y=btc_data['Price'],
+        mode='lines',
+        line=dict(color='darkorange', width=0.6),
+        hovertext=btc_data['hover_text'],
+        hoverinfo='text'
+    )
+)
+
+# Layout beállítások
+fig.update_layout(
+    title="Bitcoin árfolyam időbeli alakulása (Yahoo Finance)",
+    xaxis_title="Dátum",
+    yaxis_title="Záróár (USD)",
+    template="simple_white",
+    hovermode="x unified"
+)
+
+# Ábra megjelenítése
+fig.show()
+    </textarea>
+    <div id="plot"></div>
+
+    <script>
+        async function main() {
+            try {
+                // Pyodide inicializálása
+                let pyodide = await loadPyodide();
+                await pyodide.loadPackage(["pandas", "yfinance", "plotly"]);
+
+                // Python kód futtatása
+                const pythonCode = document.getElementById('python-code').value;
+                const result = await pyodide.runPythonAsync(pythonCode);
+
+                // Betöltés szöveg elrejtése
+                document.getElementById('loading').style.display = 'none';
+
+            } catch (error) {
+                console.error('Hiba:', error);
+                document.getElementById('loading').innerHTML = 
+                    '<div class="error">Hiba történt a Python kód futtatása közben. Kérjük, próbálja újra később.</div>';
             }
-          }
         }
-      });
-    }
 
-    fetchBitcoinData();
-  </script>
+        // Pyodide betöltése és Python kód futtatása
+        main();
+    </script>
 </body>
-</html>
+</html> 
