--- a/index.html
+++ b/index.html
@@ -2,157 +2,44 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kriptovaluta Árfolyamok</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <title>Python kód futtatása Colab-ban</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #f5f5f5;
+        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
+        .btn {
+            background: #4285F4;
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 6px;
+            font-size: 18px;
+            cursor: pointer;
+            text-decoration: none;
         }
-        #plot {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            width: 800px;
-            margin-top: 20px;
-        }
-        .code-block {
-            width: 800px;
-            margin: 20px;
-            padding: 20px;
+        .btn:hover { background: #3367D6; }
+        pre {
             background: #f8f9fa;
             border-radius: 8px;
             border: 1px solid #dee2e6;
+            padding: 20px;
+            width: 80%;
+            margin: 30px auto;
+            text-align: left;
             font-family: monospace;
             white-space: pre-wrap;
-        }
-        h1 {
-            color: #333;
-            text-align: center;
         }
     </style>
 </head>
 <body>
-    <h1>Kriptovaluta Árfolyamok Vizualizáció</h1>
-    
-    <div class="code-block">
-# Python kód a vizualizációhoz
+    <h1>Python kód futtatása Google Colab-ban</h1>
+    <a class="btn" href="https://colab.research.google.com/github/<FELHASZNÁLÓ>/<REPO>/blob/main/python_a_Colab_webhelyen.jpynb" target="_blank">
+        Nyisd meg a Colab-ban!
+    </a>
+    <pre>
+# Itt jelenik meg a notebook fő Python kódja, például:
 import yfinance as yf
 import pandas as pd
 import plotly.graph_objects as go
-
-# Bitcoin adatok letöltése
-btc_data = yf.download('BTC-USD', period='5y', interval='1d')
-
-# Indexből oszloppá alakítás
-btc_data.reset_index(inplace=True)
-btc_data['Date'] = pd.to_datetime(btc_data['Date'])
-
-# Átnevezés
-btc_data['Price'] = btc_data['Close']
-
-# Hover szöveg előállítása
-btc_data['Date_str'] = btc_data['Date'].dt.strftime('%Y-%m-%d')
-btc_data['Price_str'] = btc_data['Price'].map(lambda x: f"${x:,.2f}")
-btc_data['hover_text'] = "Dátum: " + btc_data['Date_str'] + "<br>Záróár: " + btc_data['Price_str']
-
-# Interaktív vonaldiagram
-fig = go.Figure(
-    go.Scatter(
-        x=btc_data['Date'],
-        y=btc_data['Price'],
-        mode='lines',
-        line=dict(color='darkorange', width=0.6),
-        hovertext=btc_data['hover_text'],
-        hoverinfo='text'
-    )
-)
-
-# Layout beállítások
-fig.update_layout(
-    title="Bitcoin árfolyam időbeli alakulása (Yahoo Finance)",
-    xaxis_title="Dátum",
-    yaxis_title="Záróár (USD)",
-    template="simple_white",
-    hovermode="x unified"
-)
-
-# Ábra megjelenítése
-fig.show()
-    </div>
-
-    <div id="plot"></div>
-
-    <script>
-        // Statikus adatok a Python kód alapján
-        const dates = [
-            '2023-01-01', '2023-03-01', '2023-06-01', '2023-09-01',
-            '2023-12-01', '2024-01-01', '2024-03-01'
-        ];
-        const prices = [16500, 23000, 27500, 26000, 42000, 45000, 67000];
-
-        // Hover szövegek előállítása
-        const hoverTexts = dates.map((date, i) => 
-            `Dátum: ${date}<br>Záróár: $${prices[i].toLocaleString('en-US', {minimumFractionDigits: 2})}`
-        );
-
-        // Plotly diagram konfiguráció
-        const trace = {
-            x: dates,
-            y: prices,
-            type: 'scatter',
-            mode: 'lines',
-            line: {
-                color: 'darkorange',
-                width: 0.6
-            },
-            hovertext: hoverTexts,
-            hoverinfo: 'text'
-        };
-
-        const layout = {
-            title: {
-                text: 'Bitcoin árfolyam időbeli alakulása (Yahoo Finance)',
-                font: {
-                    family: 'Arial',
-                    size: 16
-                }
-            },
-            xaxis: {
-                title: 'Dátum',
-                tickangle: -45
-            },
-            yaxis: {
-                title: 'Záróár (USD)',
-                tickformat: '$,.2f'
-            },
-            template: 'simple_white',
-            hovermode: 'x unified',
-            width: 700,
-            height: 400,
-            margin: {
-                l: 50,
-                r: 50,
-                t: 50,
-                b: 100
-            }
-        };
-
-        const config = {
-            responsive: true,
-            displayModeBar: true,
-            displaylogo: false
-        };
-
-        // Diagram megjelenítése
-        Plotly.newPlot('plot', [trace], layout, config);
-    </script>
+# ...
+    </pre>
 </body>
-</html> 
+</html>
