--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <h1>Python kód futtatása Google Colab-ban</h1>
-    <a class="btn" href="https://colab.research.google.com/github/<FELHASZNÁLÓ>/<REPO>/blob/main/python_a_Colab_webhelyen.jpynb" target="_blank">
+    <a class="btn" href="https://colab.research.google.com/drive/1uCYFG6wboo3Jen1Sc4ln9NLfnMgbEA9l?usp=drive_link#scrollTo=Re-Qvgh6HPzI" target="_blank">
         Nyisd meg a Colab-ban!
     </a>
     <pre>
