--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Kriptovaluta Árfolyamok</title>
   <!-- Chart.js és ApexCharts könyvtárak -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   <style>
     body {
@@ -18,6 +19,22 @@
     .chart-container {
       max-width: 900px;
       margin: 0 auto;
+      position: relative;
+    }
+    .reset-button {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      padding: 8px 15px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      z-index: 1000;
+    }
+    .reset-button:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
@@ -28,23 +45,40 @@
   <!-- Vonaldiagram -->
   <h2>Vonaldiagram – Kriptovaluta árfolyamok</h2>
   <div class="chart-container">
-    <div class="checkbox-container" style="margin-bottom: 20px;">
-      <label style="margin-right: 15px;">
-        <input type="checkbox" id="btcCheckbox" checked> Bitcoin (BTC)
-      </label>
-      <label style="margin-right: 15px;">
-        <input type="checkbox" id="ethCheckbox" checked> Ethereum (ETH)
-      </label>
-      <label>
-        <input type="checkbox" id="dogeCheckbox" checked> Dogecoin (DOGE)
-      </label>
+    <button class="reset-button" id="resetButton">Visszaállítás</button>
+    <div class="controls" style="margin-bottom: 20px;">
+      <div class="checkbox-container">
+        <label style="margin-right: 15px;">
+          <input type="checkbox" id="btcCheckbox" checked> Bitcoin (BTC)
+        </label>
+        <label style="margin-right: 15px;">
+          <input type="checkbox" id="ethCheckbox" checked> Ethereum (ETH)
+        </label>
+        <label>
+          <input type="checkbox" id="dogeCheckbox" checked> Dogecoin (DOGE)
+        </label>
+      </div>
     </div>
     <canvas id="lineChart"></canvas>
   </div>
 
   <!-- Gyertyadiagram -->
-  <h2>Gyertyadiagram – BTC OHLC adatok</h2>
+  <h2>Gyertyadiagram – Kriptovaluta OHLC adatok</h2>
   <div class="chart-container">
+    <button class="reset-button" id="resetCandlestickButton">Visszaállítás</button>
+    <div class="controls" style="margin-bottom: 20px;">
+      <div class="checkbox-container">
+        <label style="margin-right: 15px;">
+          <input type="checkbox" id="btcCandlestickCheckbox" checked> Bitcoin (BTC)
+        </label>
+        <label style="margin-right: 15px;">
+          <input type="checkbox" id="ethCandlestickCheckbox" checked> Ethereum (ETH)
+        </label>
+        <label>
+          <input type="checkbox" id="dogeCandlestickCheckbox" checked> Dogecoin (DOGE)
+        </label>
+      </div>
+    </div>
     <div id="candlestickChart"></div>
   </div>
 
@@ -56,6 +90,12 @@
 
   <script>
     let lineChart;
+    let allData = {
+      btc: [],
+      eth: [],
+      doge: [],
+      dates: []
+    };
 
     async function fetchLineChartData() {
       try {
@@ -69,76 +109,123 @@
         const ethData = await ethResponse.json();
         const dogeData = await dogeResponse.json();
 
-        const labels = btcData.prices.map(item => {
-          const date = new Date(item[0]);
-          return `${date.getMonth()+1}/${date.getDate()}`;
-        });
-
-        const ctx = document.getElementById('lineChart').getContext('2d');
-        
-        // Tároljuk az adatokat globálisan
-        window.chartData = {
-          btc: btcData.prices.map(item => item[1]),
-          eth: ethData.prices.map(item => item[1]),
-          doge: dogeData.prices.map(item => item[1])
+        // Tároljuk az összes adatot
+        allData = {
+          btc: btcData.prices,
+          eth: ethData.prices,
+          doge: dogeData.prices,
+          dates: btcData.prices.map(item => new Date(item[0]))
         };
 
-        // Inicializáljuk a diagramot
-        lineChart = new Chart(ctx, {
-          type: 'line',
-          data: {
-            labels: labels,
-            datasets: [
-              {
-                label: 'BTC árfolyam (USD)',
-                data: window.chartData.btc,
-                borderColor: 'orange',
-                backgroundColor: 'rgba(255,165,0,0.2)',
-                fill: false,
-                tension: 0.3,
-                hidden: !document.getElementById('btcCheckbox').checked
-              },
-              {
-                label: 'ETH árfolyam (USD)',
-                data: window.chartData.eth,
-                borderColor: 'blue',
-                backgroundColor: 'rgba(0,0,255,0.2)',
-                fill: false,
-                tension: 0.3,
-                hidden: !document.getElementById('ethCheckbox').checked
-              },
-              {
-                label: 'DOGE árfolyam (USD)',
-                data: window.chartData.doge,
-                borderColor: 'green',
-                backgroundColor: 'rgba(0,255,0,0.2)',
-                fill: false,
-                tension: 0.3,
-                hidden: !document.getElementById('dogeCheckbox').checked
-              }
-            ]
-          },
-          options: {
-            responsive: true,
-            interaction: {
-              mode: 'index',
-              intersect: false,
-            },
-            scales: {
-              y: {
-                beginAtZero: false
-              }
-            }
-          }
-        });
-
-        // Event listener-ek hozzáadása a checkbox-okhoz
-        document.getElementById('btcCheckbox').addEventListener('change', updateChartVisibility);
-        document.getElementById('ethCheckbox').addEventListener('change', updateChartVisibility);
-        document.getElementById('dogeCheckbox').addEventListener('change', updateChartVisibility);
+        updateChart();
       } catch (error) {
         console.error('Hiba a vonaldiagram adatainak lekérésekor:', error);
       }
+    }
+
+    function updateChart() {
+      const labels = allData.dates.map(date => {
+        return `${date.getMonth()+1}/${date.getDate()}`;
+      });
+
+      const ctx = document.getElementById('lineChart').getContext('2d');
+
+      if (lineChart) {
+        lineChart.destroy();
+      }
+
+      lineChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+          labels: labels,
+          datasets: [
+            {
+              label: 'BTC árfolyam (USD)',
+              data: allData.btc.map(item => item[1]),
+              borderColor: 'red',
+              backgroundColor: 'rgba(255,0,0,0.2)',
+              fill: false,
+              tension: 0.2,
+              borderWidth: 1.5,
+              pointRadius: 2,
+              pointStyle: 'circle',
+              pointBackgroundColor: 'red',
+              pointBorderColor: 'red',
+              hidden: !document.getElementById('btcCheckbox').checked
+            },
+            {
+              label: 'ETH árfolyam (USD)',
+              data: allData.eth.map(item => item[1]),
+              borderColor: 'blue',
+              backgroundColor: 'rgba(0,0,255,0.2)',
+              fill: false,
+              tension: 0.2,
+              borderWidth: 1.5,
+              pointRadius: 2,
+              pointStyle: 'circle',
+              pointBackgroundColor: 'blue',
+              pointBorderColor: 'blue',
+              hidden: !document.getElementById('ethCheckbox').checked
+            },
+            {
+              label: 'DOGE árfolyam (USD)',
+              data: allData.doge.map(item => item[1]),
+              borderColor: 'green',
+              backgroundColor: 'rgba(0,255,0,0.2)',
+              fill: false,
+              tension: 0.2,
+              borderWidth: 1.5,
+              pointRadius: 2,
+              pointStyle: 'circle',
+              pointBackgroundColor: 'green',
+              pointBorderColor: 'green',
+              hidden: !document.getElementById('dogeCheckbox').checked
+            }
+          ]
+        },
+        options: {
+          responsive: true,
+          interaction: {
+            mode: 'index',
+            intersect: false,
+          },
+          scales: {
+            y: {
+              beginAtZero: false
+            }
+          },
+          plugins: {
+            zoom: {
+              pan: {
+                enabled: true,
+                mode: 'x',
+                modifierKey: 'ctrl',
+              },
+              zoom: {
+                wheel: {
+                  enabled: true,
+                },
+                pinch: {
+                  enabled: true
+                },
+                mode: 'x',
+                drag: {
+                  enabled: true,
+                  backgroundColor: 'rgba(0,0,0,0.1)'
+                }
+              }
+            }
+          }
+        }
+      });
+
+      // Event listener-ek hozzáadása a checkbox-okhoz
+      document.getElementById('btcCheckbox').addEventListener('change', updateChartVisibility);
+      document.getElementById('ethCheckbox').addEventListener('change', updateChartVisibility);
+      document.getElementById('dogeCheckbox').addEventListener('change', updateChartVisibility);
+
+      // Event listener a visszaállítás gombhoz
+      document.getElementById('resetButton').addEventListener('click', resetZoom);
     }
 
     function updateChartVisibility() {
@@ -150,26 +237,82 @@
       }
     }
 
-    // Gyertyadiagram – BTC OHLC adatok
+    function resetZoom() {
+      if (lineChart) {
+        lineChart.resetZoom();
+      }
+    }
+
+    // Gyertyadiagram – OHLC adatok
     async function fetchCandlestickData() {
       try {
-        const response = await fetch('https://api.coingecko.com/api/v3/coins/bitcoin/ohlc?vs_currency=usd&days=365');
-        const data = await response.json();
-        const seriesData = data.map(item => ({
-          x: new Date(item[0]),
-          y: [item[1], item[2], item[3], item[4]]
-        }));
+        const [btcResponse, ethResponse, dogeResponse] = await Promise.all([
+          fetch('https://api.coingecko.com/api/v3/coins/bitcoin/ohlc?vs_currency=usd&days=365'),
+          fetch('https://api.coingecko.com/api/v3/coins/ethereum/ohlc?vs_currency=usd&days=365'),
+          fetch('https://api.coingecko.com/api/v3/coins/dogecoin/ohlc?vs_currency=usd&days=365')
+        ]);
+
+        const btcData = await btcResponse.json();
+        const ethData = await ethResponse.json();
+        const dogeData = await dogeResponse.json();
+
+        const seriesData = [
+          {
+            name: 'BTC',
+            data: btcData.map(item => ({
+              x: new Date(item[0]),
+              y: [item[1], item[2], item[3], item[4]]
+            }))
+          },
+          {
+            name: 'ETH',
+            data: ethData.map(item => ({
+              x: new Date(item[0]),
+              y: [item[1], item[2], item[3], item[4]]
+            }))
+          },
+          {
+            name: 'DOGE',
+            data: dogeData.map(item => ({
+              x: new Date(item[0]),
+              y: [item[1], item[2], item[3], item[4]]
+            }))
+          }
+        ];
 
         const options = {
           chart: {
             type: 'candlestick',
-            height: 350
+            height: 350,
+            animations: {
+              enabled: false
+            },
+            zoom: {
+              enabled: true,
+              type: 'x',
+              autoScaleYaxis: true
+            },
+            toolbar: {
+              autoSelected: 'zoom',
+              tools: {
+                download: false,
+                selection: true,
+                zoom: true,
+                zoomin: true,
+                zoomout: true,
+                pan: true,
+                reset: true
+              }
+            },
+            events: {
+              beforeResetZoom: function() {
+                return true;
+              }
+            }
           },
-          series: [{
-            data: seriesData
-          }],
+          series: seriesData,
           title: {
-            text: 'BTC OHLC',
+            text: 'Kriptovaluta OHLC',
             align: 'left'
           },
           xaxis: {
@@ -179,10 +322,38 @@
             tooltip: {
               enabled: true
             }
+          },
+          plotOptions: {
+            candlestick: {
+              colors: {
+                upward: '#00C853',
+                downward: '#FF3D00'
+              }
+            }
           }
         };
 
-        new ApexCharts(document.querySelector("#candlestickChart"), options).render();
+        const chart = new ApexCharts(document.querySelector("#candlestickChart"), options);
+        chart.render();
+
+        // Event listener-ek hozzáadása a checkbox-okhoz
+        document.getElementById('btcCandlestickCheckbox').addEventListener('change', function() {
+          chart.toggleSeries('BTC');
+        });
+        document.getElementById('ethCandlestickCheckbox').addEventListener('change', function() {
+          chart.toggleSeries('ETH');
+        });
+        document.getElementById('dogeCandlestickCheckbox').addEventListener('change', function() {
+          chart.toggleSeries('DOGE');
+        });
+
+        // Event listener a visszaállítás gombhoz
+        document.getElementById('resetCandlestickButton').addEventListener('click', function() {
+          chart.zoomX(
+            new Date(btcData[0][0]).getTime(),
+            new Date(btcData[btcData.length - 1][0]).getTime()
+          );
+        });
       } catch (error) {
         console.error('Hiba a gyertyadiagram adatainak lekérésekor:', error);
       }
