--- a/crypto_heatmap.html
+++ b/crypto_heatmap.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kripto Hőtérképek</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/yfinance@0.0.1/dist/yfinance.min.js"></script>
+
     <style>
         body {
             font-family: Arial, sans-serif;
